Login buttons are now visible & tab buttons color fix

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -15,6 +15,7 @@ body {
 }
 iframe{
   width: 100%;
+  height: -webkit-fill-available;
   overflow: hidden;
   border: 0;
 }
@@ -323,4 +324,12 @@ textarea{
   background-color:transparent;
   border-bottom: 2px solid #fff;
   border-radius: 0;
+}
+
+.nav>li>a:hover {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
+.nav-tabs>li>a:hover {
+  border: none !important;
 }
